name: language-scala
version: 0.1.0.0

synopsis:
  Scala source manipulation.

description:
  Scala parser/pretty printer.

  This work steals many neat tricks from Patryk Zadarnowski's protobuf parser.

copyright:
  Copyright (c) 2014 Jacob Stanley
  Copyright (c) 2014 Patryck Zadarnowski

homepage:      http://github.com/jystic/language-scala
license:       BSD3
license-file:  LICENSE
author:        Jacob Stanley
maintainer:    Jacob Stanley <jacob@stanley.io>
category:      Language
build-type:    Simple
cabal-version: >= 1.18

library
  hs-source-dirs: src
  default-language: Haskell2010

  exposed-modules:
    Language.Scala.Contexts
    Language.Scala.Positions
    Language.Scala.Scanner
    Language.Scala.Tokens
    Language.Scala.Utilities

  build-tools: happy, alex

  build-depends:
      base        >= 4.7 && < 5
    , array       >= 0.5
    , bytestring  >= 0.10
    , utf8-string >= 0.3
